                     CHANGES version 5.20.0

           This file summarizes changes made since 5.0


Version 5.25.3

Fixed: Buffer overrun vulnerability in URL decoding. Thanks to Zack Flack for report.

Fixed: Issue #634: Check program output.

Fixed: Issue #759: The "stop" action for "check program" has no effect if the "every" statement
is used to skip monitoring in some cycles.


Version 5.25.2

Fixed: The port connection test may be skipped on some 32-bit platforms.


Version 5.23.0

Fixed: Keep the action-pending status until the action is finished.


Version 5.22.0

Fixed: The connection test retry option was broken and performed always one test with no retry on
error.


Version 5.21.0

New: Extended the existence test, to allow to check that the object doesn't exist (for example
the process is stopped). Note: this test is available for process, file, filesystem, fifo and
directory checks only (same as non-existence test). Example:
    check process thisShouldNotRun matching "FooBar"
        if exists then exec "/usr/bin/pkill -9 FooBar"

Fixed: Issue #547: If the file service is unmonitored or stopped, the read position in the content test
is reset to the end of the file if monitoring is enabled again, so the content which is added while the
service is not monitored will be ignored.

Fixed: Issue #501: check program may fail when parent service is not monitored every cycle and multiple
services depend on it.


Version 5.20.0

New: Issue #448: Added global "set onreboot <start | nostart | laststate>" statement which allows
to override default service startup policy ("onreboot start" by default).

New: Added new options to "set limits" statement, for setting default timeouts:
      programTimeout:    300 seconds # default timeout for check program
      stopTimeout:       30 seconds  # default timeout for service stop
      startTimeout:      30 seconds  # default timeout for service start